--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,5 +5,7 @@
 }
 
 body {
-  font: Arial, Helvetica, sans-serif;
+  font: 1rem 'Helvetica Neue', Arial, sans-serif;
+  color: #121214;
+  background-color: #212121;
 }
